# bd-payment-gateway

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  QUESTIONS.md  README.md  TASKS.md  justfile
.github/workflows/: ci.yml  code-review.yml  publish-python.yml
bd-payment-gateway/: Cargo.toml  README.md
bd-payment-gateway-aamarpay/: Cargo.toml  README.md
bd-payment-gateway-aamarpay/src/: lib.rs
bd-payment-gateway-core/: Cargo.toml  README.md
bd-payment-gateway-core/src/: error.rs  http.rs  lib.rs  provider.rs  types.rs
bd-payment-gateway-js/: Cargo.toml  README.md  index.d.ts  index.js  package.json
bd-payment-gateway-js/src/: lib.rs
bd-payment-gateway-portwallet/: Cargo.toml  README.md
bd-payment-gateway-portwallet/src/: lib.rs
bd-payment-gateway-py/: Cargo.toml  README.md  bd_payment_gateway_py.pyi  pyproject.toml
bd-payment-gateway-py/examples/: .env.example  smoke_test.py
bd-payment-gateway-py/python/bd_payment_gateway/: __init__.py  _bd_payment_gateway_py.pyi  errors.py
bd-payment-gateway-py/python/bd_payment_gateway/sslcommerz/: __init__.py  client.py  models.py
bd-payment-gateway-py/src/: lib.rs
bd-payment-gateway-py/tests/: test_sslcommerz_client.py  test_sslcommerz_models.py
bd-payment-gateway-shurjopay/: Cargo.toml  README.md
bd-payment-gateway-shurjopay/src/: lib.rs
bd-payment-gateway-sslcommerz/: Cargo.toml  README.md
bd-payment-gateway-sslcommerz/src/: lib.rs
bd-payment-gateway/examples/: aamarpay_initiate_verify.rs  portwallet_initiate_verify.rs  shurjopay_initiate_verify.rs  sslcommerz_initiate_verify.rs
bd-payment-gateway/src/: lib.rs
bd-payment-gateway/tests/: live_smoke.rs  provider_feature_exports.rs
docs/: API_INVENTORY.md  CONFIGURATION.md  DEV_SETUP.md  PYTHON_API_SPEC.md  QUICKSTART_SSLCOMMERZ.md  TROUBLESHOOTING.md  provider-endpoints.md  provider-template.md  python-pypi-release.md
scripts/: quality-check.sh
