[workspace]
members = [
  "bd-payment-gateway-core",
  "bd-payment-gateway-shurjopay",
  "bd-payment-gateway-portwallet",
  "bd-payment-gateway-aamarpay",
  "bd-payment-gateway-sslcommerz",
  "bd-payment-gateway",
  "bd-payment-gateway-js",
  "bd-payment-gateway-py",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/bd-payment-gateway"
rust-version = "1.82"

[workspace.dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
url = { version = "2", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }
http = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
napi = { version = "3", default-features = false, features = ["tokio_rt", "serde-json"] }
napi-derive = "3"
pyo3 = { version = "0.28", features = ["extension-module", "abi3", "abi3-py39"] }
httpmock = "0.8"
