[package]
name = "bd-payment-gateway-portwallet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "PortWallet provider crate for bd-payment-gateway"

[dependencies]
async-trait.workspace = true
bd-payment-gateway-core = { path = "../bd-payment-gateway-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
secrecy.workspace = true
rust_decimal.workspace = true
sha2.workspace = true
chrono.workspace = true

[dev-dependencies]
httpmock.workspace = true
tokio.workspace = true
