[package]
name = "bd-payment-gateway-py"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "PyO3 bindings for bd-payment-gateway"

[lib]
name = "bd_payment_gateway_py"
crate-type = ["cdylib"]

[features]
default = []
shurjopay = ["dep:bd-payment-gateway-shurjopay"]
portwallet = ["dep:bd-payment-gateway-portwallet"]
aamarpay = ["dep:bd-payment-gateway-aamarpay"]
sslcommerz = ["dep:bd-payment-gateway-sslcommerz"]
all-providers = ["shurjopay", "portwallet", "aamarpay", "sslcommerz"]

[dependencies]
bd-payment-gateway-core = { path = "../bd-payment-gateway-core" }
bd-payment-gateway-shurjopay = { path = "../bd-payment-gateway-shurjopay", optional = true }
bd-payment-gateway-portwallet = { path = "../bd-payment-gateway-portwallet", optional = true }
bd-payment-gateway-aamarpay = { path = "../bd-payment-gateway-aamarpay", optional = true }
bd-payment-gateway-sslcommerz = { path = "../bd-payment-gateway-sslcommerz", optional = true }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
url.workspace = true
tokio.workspace = true
once_cell = "1"
