[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "bd-payment-gateway"
version = "0.1.4"
description = "High-performance, Rust-powered, security-focused Bangladesh payment gateway library for Python"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.9"
keywords = ["bangladesh", "payments", "gateway", "sdk", "pyo3"]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Barrzen/bd-payment-gateway#readme"
Repository = "https://github.com/Barrzen/bd-payment-gateway"
Documentation = "https://github.com/Barrzen/bd-payment-gateway/tree/main/docs"
Issues = "https://github.com/Barrzen/bd-payment-gateway/issues"

[dependency-groups]
dev = [
  "maturin>=1.8,<2",
  "mypy>=1.16",
  "pytest>=8.4",
  "ruff>=0.12",
  "typing-extensions>=4.12",
]

[tool.maturin]
features = ["all-providers"]
module-name = "bd_payment_gateway._bd_payment_gateway_py"
python-source = "python"
compatibility = "pypi"

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
mypy_path = ["python"]
warn_unused_ignores = true
exclude = ["^target/"]
